# chronicle

./: .gitignore  Dockerfile  Procfile  README.md  activate.sh  fly.toml  pyproject.toml  railway.toml  requirements.txt  setup.sh
.github/workflows/: cd.yml  ci.yml
chronicle/: .env.example  .env.local.example  package-lock.json  package.json
chronicle/backend/: main.py
chronicle/frontend/: package-lock.json  package.json
chronicle/frontend/app/: layout.tsx  page.tsx
chronicle/scripts/: test_chronicle.py
chronicle/test_notes/: 01_auth_notes.md  02_database_notes.md  03_api_notes.md  04_devops_notes.md  05_frontend_notes.md  06_product_notes.md  07_bugs_incidents.md  08_architecture_notes.md
snowmemory/: README.md  __init__.py  config.yaml  demo.py  pyproject.toml  server.py
snowmemory/audit/: compliance.py
snowmemory/backends/: base.py  in_memory.py  registry.py  snowflake_backend.py  snowflake_cortex.py
snowmemory/cli/: __init__.py
snowmemory/config/: schema.py
snowmemory/core/: classifier.py  embedder.py  models.py  orchestrator.py
snowmemory/decay/: resurrection.py
snowmemory/graph/: extractor.py
snowmemory/inheritance/: protocol.py
snowmemory/salience/: adaptive_threshold.py  compound.py
snowmemory/tests/: test_all.py
